v1.5.11  + Moved to minecraft 1.21  + Updated to at least Java